fix content jumping but now all video is 16:9

--- a/sass/site/primary/_exercises.scss
+++ b/sass/site/primary/_exercises.scss
@@ -8,19 +8,31 @@
     & .wp-block-video {
         margin: 0;
         background-color: #333;
-        min-width: 60%;
         border-radius: 5px;
-
-        & video {
-            display: block;
-            width: auto;
-            margin: 0 auto;
-        }
-
+        width: calc(100vw - 2rem);
+        height: calc( ( 100vw - 2rem ) * 0.5625);
+        
         @media (min-width: 768px) {
             float: left;
             margin-right: 2rem;
+            width: 60vw;
+            height: 33.75vw;
         }
+
+        & video {
+            display: block;
+            margin: 0 auto;
+            border-radius: 5px;
+            width: calc(100vw - 2rem);
+            height: calc( ( 100vw - 2rem ) * 0.5625);
+
+            @media (min-width: 768px) {
+                width: 60vw;
+                height: 33.75vw;
+            }
+        }
+
+        
     }
 
     & .entry-footer {
