--- a/style.css
+++ b/style.css
@@ -1852,16 +1852,25 @@ a {
   .exercise-single-article .wp-block-video {
     margin: 0;
     background-color: #333;
-    min-width: 60%;
-    border-radius: 5px; }
-    .exercise-single-article .wp-block-video video {
-      display: block;
-      width: auto;
-      margin: 0 auto; }
+    border-radius: 5px;
+    width: calc(100vw - 2rem);
+    height: calc( ( 100vw - 2rem ) * 0.5625); }
     @media (min-width: 768px) {
       .exercise-single-article .wp-block-video {
         float: left;
-        margin-right: 2rem; } }
+        margin-right: 2rem;
+        width: 60vw;
+        height: 33.75vw; } }
+    .exercise-single-article .wp-block-video video {
+      display: block;
+      margin: 0 auto;
+      border-radius: 5px;
+      width: calc(100vw - 2rem);
+      height: calc( ( 100vw - 2rem ) * 0.5625); }
+      @media (min-width: 768px) {
+        .exercise-single-article .wp-block-video video {
+          width: 60vw;
+          height: 33.75vw; } }
   .exercise-single-article .entry-footer {
     margin-top: 1em; }
   .exercise-single-article .entry-footer .exercises-tag {
